--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -93,6 +93,6 @@ layout: default
       {% endfor %}
       </div>
   </article>
-
+{% bibliography -f {{ site.scholar.bibliography }} %}
 </div>
 {% endunless %}
