--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -39,7 +39,7 @@ layout: default
   <article>
     <header class="post-header">
       Research
-    <\header>
+    </header>
     <a class="anchor" id="{{ research }}"></a>
       <div class="card mt-3 p-3">
           <div>
