--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -42,6 +42,7 @@ layout: default
     </header>
     <a class="anchor" id="{{ research }}"></a>
       <div class="card mt-3 p-3">
+      <h3 class="card-title font-weight-medium">{{ Research2 }}</h3>
           <div>
             {% bibliography -f {{ site.scholar.bibliography }} %}
           </div>
