--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -36,6 +36,9 @@ layout: default
       </div>
     
   </article>
+</div>
+<div class="post">
+
   <article>
     <header class="post-header">
       Research
