--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -46,7 +46,7 @@ layout: default
     <a class="anchor" id="{{ research }}"></a>
       <div class="card mt-3 p-3">
       <h3 class="card-title font-weight-medium">{{ Research2 }}</h3>
-          <div>
+          <div class="bib">
             {% bibliography -f {{ site.scholar.bibliography }} %}
           </div>
       </div>
