--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -42,7 +42,7 @@ layout: default
   <article>
      <a class="anchor" id="{{ research }}"></a>
       <div class="card mt-3 p-3">
-      <h3 class="card-title font-weight-medium">{{ Research }}</h3>
+      <h3 class="card-title font-weight-medium"> Research </h3>
           {%- include selected_papers.html %}
       </div>
   </article>
