--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -40,10 +40,8 @@ layout: default
 <div class="post">
 
   <article>
-    
-      <h3 class="card-title font-weight-medium"> Research </h3>
-     <a class="anchor" id="{{ research }}"></a>
-      <div class="card mt-3 p-3">
+
+      <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
           {%- include selected_papers.html %}
       </div>
   </article>
