--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -40,10 +40,11 @@ layout: default
 <div class="post">
 
   <article>
-
-      <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
+     <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
+       <div>
           {%- include selected_papers.html %}
-      </div>
+       </div>
+       </div>
   </article>
 
 </div>
