--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,4 @@
 
           <div class="publications">
-            {% bibliography %}
+            {% bibliography --template shortbib %}
           </div>
