--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,5 @@
-
+scholar:
+  bibliography_template: shortbib
           <div class="publications">
-            {% bibliography --template shortbib %}
+            {% bibliography %}
           </div>
