--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,6 +2,7 @@
 layout: default
 scholar:
   bibliography_template: shortbib
+  style: apa
 ---
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
