--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -131,10 +131,7 @@
         {% assign entrytype_text = entrytype | strip_html | strip %}
         {%- capture periodical -%}{{ entrytype }}{%- if entrytype_text != "" and entryyear != "" -%}, {%- endif -%}{{ entrymonth }}{{ entryyear }}{%- endcapture -%}
         <div class="periodical">
-          {{ periodical | strip }}
-        </div>
-        <div class="periodical">
-          {{ entry.note | strip }}
+          {{ periodical | strip }}{{". "}}{{ entry.note | strip }}
         </div>
 
           <!-- Links/Buttons -->
