--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -33,9 +33,7 @@
         <!-- Entry bib key -->
         <div id="{{entry.key}}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
         <!-- Title -->
-        <div class="title">{{entry.title}}</div>
-        <!-- Author -->
-        <div class="author">
+        <div class="title">{{entry.title}}{{". "}}
         {% assign author_array_size = entry.author_array | size %}
 
         {% assign author_array_limit = author_array_size %}
