--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -45,7 +45,7 @@ scholar:
   <article>
      <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
        <div>
-          {% bibliography -f {{ site.scholar.bibliography }} --sort_by ascending --group_by none %}
+          {% bibliography -f {{ site.scholar.bibliography }} -q @*[year >=2013] %}
        </div>
        </div>
   </article>
