--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -31,8 +31,8 @@
         {%- endif -%}
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
-        <!-- Title -->
+        <!-- <div id="{{entry.key}}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
+       <!-- Title -->
         <div class="title">{{entry.title}}{{". "}}
         {% assign author_array_size = entry.author_array | size %}
 
