--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -51,6 +51,17 @@ scholar:
   </article>
 
 </div>
+<div class="post">
+
+  <article>
+     <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Talks and posters</h3>
+       <div>
+          {% bibliography -f talks --group_by none %}
+       </div>
+       </div>
+  </article>
+
+</div>
 {% else %}
 <div class="post">
 
