--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -40,7 +40,7 @@ scholar:
     
   </article>
 </div>
-<div class="post">
+<div class="cv">
 
   <article>
      <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
@@ -51,7 +51,7 @@ scholar:
   </article>
 
 </div>
-<div class="post">
+<div class="cv">
 
   <article>
      <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Talks and posters</h3>
