--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -33,7 +33,7 @@
         <!-- Entry bib key -->
        <div id="{{entry.key}}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
        <!-- Title -->
-        <div class="title">{{entry.title}}{{". With "}}
+        <div class="title">{{entry.title}}{{". "}}
         {% assign author_array_size = entry.author_array | size %}
 
         {% assign author_array_limit = author_array_size %}
@@ -42,6 +42,9 @@
         {% endif %}
 
         {%- for author in entry.author_array limit: author_array_limit -%}
+        {%- if site.scholar.last_name contains author_last_name -%}
+        {%- else -%}
+           
           {%- assign author_is_self = false -%}
           {%- assign author_last_name = author.last | remove: "¶" | remove: "&" | remove: "*" | remove: "†" | remove: "^" -%}
           {%- if site.scholar.last_name contains author_last_name -%}
@@ -71,6 +74,7 @@
             {%- else -%}
               {{author.first}} {{author.last}}
             {%- endif -%}
+          {%- endif -%}
           {%- endif -%}
         {%- endfor -%}
         {%- assign more_authors = author_array_size | minus: author_array_limit -%}
