--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
     {%- else -%}
     <footer class="sticky-bottom mt-5">
       <div class="container">
+        <!-- COMENTADO
         &copy; Hosted in github and with the theme al-folio. {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
@@ -20,6 +21,7 @@
         {%- if site.last_updated -%}
         Last updated: {{ "now" | date: '%B %d, %Y' }}.
         {%- endif %}
+          -->
       </div>
     </footer>
     {%- endif %}
