--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -60,11 +60,13 @@
           {%- endif -%}
 
           {%- if forloop.length > 1 -%}
+            {{"With "}}  
             {%- if forloop.first == false -%},&nbsp;{%- endif -%}
             {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
           {%- endif -%}
           {%- if author_is_self -%}
-            {{author.first}} {{author.last}}
+            <!-- {{author.first}} {{author.last}} -->
+            {{""}}  
           {%- else -%}
             {%- if coauthor_url -%}
               <a href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
