--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -60,7 +60,7 @@
           {%- endif -%}
 
           {%- if forloop.length > 1 -%}
-            {{"With "}}  
+            {%- if forloop.first == true -%} {{"With }}{%- endif -%}
             {%- if forloop.first == false -%},&nbsp;{%- endif -%}
             {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
           {%- endif -%}
