--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -61,11 +61,15 @@
 
           {%- if forloop.length > 1 -%}
             {%- if forloop.first == true -%} {{"With "}}{%- endif -%}
+          {%- endif -%}  
+          {%- if forloop.length > 2 -%}
             {%- if forloop.first == false -%},&nbsp;{%- endif -%}
             {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
           {%- endif -%}
-          {%- if author_is_self -%}
+          {%- if author_is_self = false -%}
              {{author.first}} {{author.last}} 
+          {%- endif -%} 
+              <!--
           {%- else -%}
             {%- if coauthor_url -%}
               <a href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
@@ -73,6 +77,7 @@
               {{author.first}} {{author.last}}
             {%- endif -%}
           {%- endif -%}
+              -->
         {%- endfor -%}
         {%- assign more_authors = author_array_size | minus: author_array_limit -%}
 
