--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -61,14 +61,14 @@
 
           {%- if forloop.length > 1 -%}
             {%- if forloop.first == true -%} {{"With "}}{%- endif -%}
-          {%- endif -%}  
-          {%- if forloop.length > 2 -%}
-            {%- if forloop.first == false -%},&nbsp;{%- endif -%}
-            {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
-          {%- endif -%}
-          {%- if author_is_self = false -%}
+            {%- if forloop.length > 2 -%}
+                  {%- if forloop.first == false -%},&nbsp;{%- endif -%}
+                  {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
+              {%- endif -%}  
+              {%- endif -%}
+          {%- unless author_is_self -%}
              {{author.first}} {{author.last}} 
-          {%- endif -%} 
+          {%- endunless -%} 
               <!--
           {%- else -%}
             {%- if coauthor_url -%}
