--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -61,8 +61,10 @@
 
           {%- if forloop.length > 1 -%}
             {%- if forloop.first == true -%} {{"With "}}{%- endif -%}
-            {%- if forloop.first == false -%},&nbsp;{%- endif -%}
-            {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%} 
+            {%- if forloop.length > 2 -%}
+                  {%- if forloop.first == false -%},&nbsp;{%- endif -%}
+                  {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%} 
+                {%- endif -%}
           {%- endif -%}
           {%- if author_is_self -%}
              <!--{{author.first}} {{author.last}} -->
