--- a/_layouts/shortbib.html
+++ b/_layouts/shortbib.html
@@ -59,10 +59,9 @@
             {%- endfor -%}
           {%- endif -%}
 
-          {%- if forloop.length > 1 -%}
-            {%- if forloop.first == true -%} {{"With "}}{%- endif -%}
-            {%- if forloop.length > 2 -%}
-                  {%- if forloop.first == false -%},&nbsp;{%- endif -%}
+          {%- if forloop.length > 1 -%} {%- if forloop.first == true -%} {{"With "}} {%- endif -%}
+          {%- if forloop.length > 2 -%} 
+                  {%- if forloop.index > 2 -%},&nbsp;{%- endif -%}
                   {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%} 
                 {%- endif -%}
           {%- endif -%}
