--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -76,6 +76,8 @@ layout: default
 
             </div>
           {%- endif %}
+              
+      {%- include footer.html %}
         </article>
 
 </div>
