--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,8 +6,8 @@ scholar:
 ---
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
+<title> </title>
 <div class="post">
-
   <header class="post-header">
     <h1 class="post-title">{{"Curriculum Vitae "}} {% if page.cv_pdf %}<a href="{{page.cv_pdf}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
       {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
