--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,6 +6,8 @@ scholar:
 ---
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
+<meta name="author" content=" ">
+<meta name="title" content=" ">
 <title> </title>
 <div class="post">
   <header class="post-header">
