--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -8,7 +8,7 @@ scholar:
 {% unless site.data.resume %}
 <meta name="author" content=" ">
 <meta name="title" content=" ">
-<title> </title>
+<title> Title </title>
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{"Curriculum Vitae "}} {% if page.cv_pdf %}<a href="{{page.cv_pdf}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
