--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,6 +6,10 @@ scholar:
 ---
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
+<head>
+  <title>tiiiyle</title>
+</head>
+<body>
 <meta name="author" content=" ">
 <meta name="title" content=" ">
 <div class="post">
