--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -7,9 +7,14 @@ scholar:
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
 <head>
-  <title>tiiiyle</title>
+  <title> </title>
+  <script>
+    window.onload = function() {
+      var titleElement = document.title;
+      titleElement = " ";
+    };
+  </script>
 </head>
-<body>
 <meta name="author" content=" ">
 <meta name="title" content=" ">
 <div class="post">
