--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,25 +6,24 @@ scholar:
 ---
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
-<head>
-  <title> </title>
-  <script>
-    window.onload = function() {
-      var titleElement = document.title;
-      titleElement = " ";
-    };
-  </script>
-</head>
 <meta name="author" content=" ">
 <meta name="title" content=" ">
 <div class="post">
-  <title> Title </title>
   <header class="post-header">
-    <h1 class="post-title">{{"Curriculum Vitae "}} {% if page.cv_pdf %}<a href="{{page.cv_pdf}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
+    <h1 class="post-title">{{" "}} {% if page.cv_pdf %}<a href="{{page.cv_pdf}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
       {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
   </header>
 
   <article>
+<head>
+  <title> Curriculum Vitae </title>
+  <script>
+    window.onload = function() {
+      var titleElement = document.title;
+      titleElement = "Curriculum Vitae";
+    };
+  </script>
+</head>
     <div class="cv">
       {% for entry in site.data.cv %}
         <a class="anchor" id="{{ entry.title }}"></a>
