--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -10,7 +10,7 @@ scholar:
 <meta name="title" content=" ">
 <div class="post">
   <header class="post-header">
-    <h1 class="post-title">{{" "}} {% if page.cv_pdf %}<a href="{{page.cv_pdf}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
+    <h1 class="post-title">{{"&#65279;"}} {% if page.cv_pdf %}<a href="{{page.cv_pdf}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
       {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
   </header>
 
