--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
     </div>
 
     <!-- Footer -->
-    {%- include footer.html %}
+    <!-- {%- include footer.html %} lo saque de aqui, solo aparece en el about -->
 
     <!-- JavaScripts -->
     {% include scripts/jquery.html %}
