--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -55,12 +55,14 @@ scholar:
   <article>
      <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
        <div>
-          {% bibliography --group_by none %}
+          {% bibliography -f preprints --group_by none %}
+         
+           {% bibliography -f papers --group_by none %}
        </div>
        </div>
   </article>
-
 </div>
+
 <div class="cv">
 
   <article>
