--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -52,18 +52,25 @@ scholar:
 </div>
 <div class="cv">
 
-  <article>
-     <div class="card mt-3 p-3"><h3 class="card-title font-weight-medium"> Research </h3>
-       <div>
-          {% bibliography -f preprints --group_by none %}
+<article>
+  <div class="card mt-3 p-3">
+    <h3 class="card-title font-weight-medium">Research</h3>
 
-          test
-         
-           {% bibliography -f papers --group_by none %}
-       </div>
-       </div>
-  </article>
-</div>
+    <!-- Subtitle for the first section -->
+    <h4 class="card-subtitle text-muted mt-4">Pre-prints</h4>
+    <div>
+      {% bibliography -f preprints --group_by none %}
+    </div>
+
+    <!-- Subtitle for the second section -->
+    <h4 class="card-subtitle text-muted mt-4">Published Papers</h4>
+    <div>
+      {% bibliography -f papers --group_by none %}
+    </div>
+
+  </div>
+</article>
+
 
 <div class="cv">
 
