--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -50,6 +50,47 @@ scholar:
     
   </article>
 </div>
+<article>
+  <div class="card mt-3 p-3">
+    <h3 class="card-title font-weight-medium">General Information</h3>
+    <ul class="list-unstyled mt-3">
+      <li class="mb-2">
+        <b>Name:</b> Nicanor Carrasco-Vargas
+      </li>
+      <li class="mb-2">
+        <b>Affiliation:</b> Jagiellonian University, Poland
+      </li>
+      <li class="mb-2">
+        <b>Contact:</b> nicanor.vargas 📧 uj.edu.pl
+      </li>
+      <li class="mb-2">
+        <b>Academic website:</b>
+        <a href="https://nicanorcarrascovargas.github.io" target="_blank">nicanorcarrascovargas.github.io</a>
+      </li>
+      <li>
+        <b>Orcid:</b>
+        <a href="https://orcid.org/0009-0002-7381-4382/print" target="_blank">orcid.org/0009-0002-7381-4382/</a>
+      </li>
+    </ul>
+  </div>
+</article>
+
+
+<article>
+  <div class="card mt-3 p-3">
+    <h3 class="card-title font-weight-medium">Education</h3>
+    <ul class="list-unstyled mt-3">
+      <li class="mb-2">
+        <b>PhD in Mathematics.</b> Pontifical Catholic University of Chile, Chile. 2020 - 2024. Supervised by Cristóbal Rojas and Sebastián Barbieri.
+      </li>
+      <li>
+        <b>Bachelor in mathematics.</b> University of Concepción, Chile. 2014 - 2018.
+      </li>
+    </ul>
+  </div>
+</article>
+
+
 <div class="cv">
 
 <article>
