--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -86,7 +86,10 @@ scholar:
     <h3 class="card-title font-weight-medium">Education</h3>
     <ul class="list-unstyled mt-3">
       <li class="mb-2">
-        <b>PhD in Mathematics.</b> Pontifical Catholic University of Chile, Chile. 2020 - 2024. Supervised by Cristóbal Rojas and Sebastián Barbieri.
+        <b>Postdoc. </b> Jagiellonian University, Poland. 2024 - 2026. With Adam Kanigowski.
+      </li>
+      <li>
+       <b>PhD in Mathematics.</b> Pontifical Catholic University of Chile, Chile. 2020 - 2024. With Cristóbal Rojas and Sebastián Barbieri.
       </li>
       <li>
         <b>Bachelor in mathematics.</b> University of Concepción, Chile. 2014 - 2018.
