--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -104,13 +104,13 @@ scholar:
     <h3 class="card-title font-weight-medium">Research</h3>
 
     <!-- Subtitle for the first section -->
-    <h4 class="card-subtitle text-muted mt-4">Pre-prints</h4>
+    <h4 class="card-subtitle text-muted mt-4">Submitted</h4>
     <div>
       {% bibliography -f preprints --group_by none %}
     </div>
 
     <!-- Subtitle for the second section -->
-    <h4 class="card-subtitle text-muted mt-4">Published Papers</h4>
+    <h4 class="card-subtitle text-muted mt-4">Accepted</h4>
     <div>
       {% bibliography -f papers --group_by none %}
     </div>
